feat: add ingest URL from interface

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,10 @@
-FROM oven/bun:latest
-
-RUN mkdir /app
+FROM selenium/standalone-chrome:latest
+USER root
+RUN sudo mkdir /app
 WORKDIR /app
+
+RUN sudo apt-get install unzip
+RUN curl -fsSL https://bun.sh/install | sudo BUN_INSTALL=/usr bash
 
 # Copy source
 COPY package.json ./
