--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,6 +51,8 @@ services:
       dockerfile: ./docker/chroma/Dockerfile
     volumes:
       - chromaDB:/chroma
+    environment:
+      - ALLOW_RESET=true
 
 volumes:
   ollamaData:
