--- a/src/chat-interface/package.json
+++ b/src/chat-interface/package.json
@@ -13,7 +13,10 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@quasar/extras": "^1.16.4",
+    "highlight.js": "^11.9.0",
+    "marked": "^11.2.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
@@ -22,6 +25,7 @@
   "devDependencies": {
     "@quasar/app-vite": "^1.3.0",
     "@quasar/cli": "2.3.0",
+    "@types/marked": "^6.0.0",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
