--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       - 9000:9000
   api:
     restart: always
+    tty: true
     build:
       context: .
       dockerfile: ./docker/Dockerfile
